[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/background_day.png" type="Texture" id=1]
[ext_resource path="res://subscenes/Bird.tscn" type="PackedScene" id=2]
[ext_resource path="res://subscenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://subscenes/obstacle_spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://subscenes/ground.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/scripts/World.gd" type="Script" id=6]
[ext_resource path="res://assets/audio/point.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sprites/background_night.png" type="Texture" id=8]
[ext_resource path="res://assets/audio/DayMusic.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/NightMusic.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/audio/one_hundred_points_song.ogg" type="AudioStream" id=11]

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 121.854, 256.066 )
scale = Vector2( 1.69242, 2.00052 )
texture = ExtResource( 1 )

[node name="Background2" type="Sprite" parent="."]
visible = false
position = Vector2( 121.854, 256.066 )
scale = Vector2( 1.69242, 2.00052 )
texture = ExtResource( 8 )

[node name="ObstacleSpawner" parent="." instance=ExtResource( 4 )]

[node name="Bird" parent="." instance=ExtResource( 2 )]
position = Vector2( 40, 144 )
gravity_scale = 4.0

[node name="Ground" parent="." instance=ExtResource( 5 )]

[node name="ten_points" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 122, 256 )
stream = ExtResource( 7 )

[node name="DayMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 122, 256 )
stream = ExtResource( 9 )

[node name="NightMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 122, 256 )
stream = ExtResource( 10 )

[node name="OneHundredMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 122, 256 )
stream = ExtResource( 11 )
